--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         .section {
             text-align: left; /* 텍스트 왼쪽 정렬 */
             margin-top: 40px; /* 상단 마진 */
-            padding: 0 10px; /* 좌우 패딩 조정 */
+            padding: 0 5px; /* 좌우 패딩 조정 - 기본값 줄임 */
         }
         /* 섹션 제목 스타일 */
         .section h2 {
@@ -183,7 +183,7 @@
             }
             /* 모바일에서 섹션 좌우 패딩 조정 */
             .section {
-                 padding: 0 5px; /* 모바일에서 좌우 패딩 줄임 */
+                 padding: 0 0px; /* 모바일에서 좌우 패딩 제거 */
             }
              /* 모바일에서 캐러셀 제어 버튼 위치 조정 */
             .carousel-control.prev {
@@ -215,8 +215,8 @@
         .popular-answers-section {
             position: relative; /* 자식 요소인 버튼의 절대 위치 기준 */
             margin-top: 20px; /* 상단 마진 */
-            padding-left: 10px; /* 좌측 패딩 추가 (다른 섹션과 맞춤) */
-            padding-right: 10px; /* 우측 패딩 유지 (버튼 공간 확보) */
+            padding-left: 5px; /* 좌측 패딩 추가 (다른 섹션과 맞춤) */
+            padding-right: 5px; /* 우측 패딩 유지 (버튼 공간 확보) */
         }
 
         /* 캐러셀 항목들을 감싸는 컨테이너 (스크롤되는 부분) */
