--- a/index.html
+++ b/index.html
@@ -748,3 +748,216 @@
 
 
 </html>
+
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>자동 팝업창</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        /* 팝업창 스타일 */
+        #popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 10;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        #popup-content {
+            background-color: #ffffff;
+            padding: 20px; /* 모바일: padding 감소 */
+            border-radius: 12px;
+            text-align: center;
+            width: 95%; /* 모바일: width 증가 */
+            max-width: 550px; /* 최대 너비 유지 */
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+            animation: fadeIn 0.3s ease-out;
+            max-height: 80vh;
+            border: none;
+            display: flex;
+            flex-direction: column;
+            margin: 10px; /* 모바일: margin 추가 */
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        #popup-title {
+            font-size: 24px; /* 모바일: 폰트 크기 감소 */
+            font-weight: 700;
+            margin-bottom: 16px; /* 모바일: margin 감소 */
+            color: #2c3e50;
+            text-align: left;
+        }
+        #popup-text {
+            font-size: 16px; /* 모바일: 폰트 크기 감소 */
+            line-height: 1.7;
+            margin-bottom: 20px; /* 모바일: margin 감소 */
+            color: #495057;
+            text-align: left;
+            flex: 1;
+            overflow: auto;
+        }
+        #popup-buttons {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 25px; /* 모바일: margin 감소 */
+            flex-shrink: 0;
+        }
+        #popup-close {
+            padding: 12px 25px; /* 모바일: padding 감소 */
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 16px; /* 모바일: 폰트 크기 감소 */
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 5px 11px rgba(0, 0, 0, 0.1);
+            background-color: #007bff;
+            border-radius: 25px;
+        }
+        #popup-close:hover {
+            background-color: #0056b3;
+            box-shadow: 0 7px 14px rgba(0, 0, 0, 0.15);
+        }
+        #popup-close:active {
+            background-color: #004080;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transform: translateY(1px);
+        }
+        #popup-today-close {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            color: #868e96;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            margin-right: auto;
+        }
+        #popup-today-close input[type="checkbox"] {
+            margin-right: 8px; /* 모바일: margin 감소 */
+            position: relative;
+            cursor: pointer;
+            width: 20px; /* 모바일: 크기 감소 */
+            height: 20px; /* 모바일: 크기 감소 */
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            border: 2px solid #adb5bd;
+            border-radius: 5px;
+            outline: none;
+            transition: border-color 0.3s ease, background-color 0.3s ease;
+        }
+        #popup-today-close input[type="checkbox"]:checked {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        #popup-today-close input[type="checkbox"]:checked::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(45deg);
+            width: 6px;
+            height: 12px;
+            border: solid white;
+            border-width: 0 3px 3px 0;
+        }
+        #popup-today-close input[type="checkbox"]:focus {
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
+        }
+        .popup-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+            margin-bottom: 20px; /* 모바일: margin 감소 */
+        }
+    </style>
+    <script>
+        window.onload = function() {
+            var popup = document.getElementById('popup');
+            var closeButton = document.getElementById('popup-close');
+            var todayCloseButton = document.getElementById('popup-today-close');
+            var todayCloseCheckbox = todayCloseButton.querySelector('input[type="checkbox"]');
+
+            // 팝업 표시
+            if (getCookie('popup_closed') !== 'true') {
+                popup.style.display = 'flex';
+            }
+
+            // 닫기 버튼 클릭 이벤트
+            closeButton.onclick = function() {
+                if (todayCloseCheckbox.checked) {
+                    setCookie('popup_closed', 'true', 1);
+                } else {
+                    deleteCookie('popup_closed');
+                }
+                popup.style.display = 'none';
+            };
+
+            // 오늘 하루 보지 않기 버튼 클릭 이벤트
+            todayCloseButton.onclick = function() {
+                todayCloseCheckbox.checked = !todayCloseCheckbox.checked;
+            };
+
+            // 쿠키 설정 함수
+            function setCookie(name, value, days) {
+                var expires = "";
+                if (days) {
+                    var date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toUTCString();
+                }
+                document.cookie = name + "=" + (value || "") + expires + "; path=/";
+            }
+
+            // 쿠키 가져오기 함수
+            function getCookie(name) {
+                var nameEQ = name + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) === ' ') {
+                        c = c.substring(1, c.length);
+                    }
+                    if (c.indexOf(nameEQ) === 0) {
+                        return c.substring(nameEQ.length, c.length);
+                    }
+                }
+                return null;
+            }
+
+            // 쿠키 삭제 함수
+            function deleteCookie(name) {
+                document.cookie = name + '=; path=/; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+            }
+        };
+    </script>
+</head>
+<body>
+    <div id="popup">
+        <div id="popup-content">
+            <h2 id="popup-title">Jungdapi 서비스 장애 안내 및 사과의 말씀</h2>
+            <p id="popup-text">안녕하세요, Jungdapi 운영팀입니다.<br><br>먼저, 2025년 4월 29일(화) 하루 동안 발생한 서버 장애로 인해 서비스 이용에 불편을 겪으신 모든 이용자분들께 깊이 사과드립니다. 특히, 해당일에 서비스를 이용해주신 214,933여 명의 사용자분들, 그리고 언제나 저희를 믿고 함께해주시는 1만 3000여 명의 프리미엄 회원 여러분들께 큰 불편과 실망을 드린 점, 진심으로 송구스럽게 생각합니다.<br><br>이번 장애는 갑작스러운 트래픽 급증으로 인해 서버가 과부하되면서 발생한 문제였습니다. 즉시 대응에 나섰지만, 하루 동안 원활한 서비스를 제공하지 못한 점은 어떠한 이유로도 책임을 피할 수 없음을 잘 알고 있습니다.<br><br>Jungdapi는 이번 일을 계기로 시스템 전반을 점검하고 안정화 작업을 마쳤으며, 앞으로는 더욱 철저한 모니터링과 기술적 대응을 통해 유사한 문제가 재발하지 않도록 최선을 다하겠습니다.<br><br>그리고 오늘부터, 새로운 마음가짐으로 더욱 똑똑하고 안정적인 AI Jungdapi와 함께 새 출발을 시작합니다. AI Jungdapi는 단순한 기능 개선을 넘어 여러분의 궁금증을 더 정확하고 신속하게 해결해드릴 수 있도록 한층 더 성장하였습니다.<br><br>이번 장애에 대한 사과의 의미로, 모든 사용자에게 프리미엄 서비스를 1개월간 무료로 제공해드릴 예정입니다. 이에 따라, 이미 프리미엄 서비스를 유료로 결제하신 분들께는 전액 환불을 지원해드립니다.<br><br>환불 대상자분들께는 개별 안내가 이루어질 예정이며, 추가 문의 사항은 아래 고객센터로 연락 부탁드립니다.<br><br>고객센터: channel.onebox.io<br>이메일 문의: support@onebox.kro.kr<br><br>불편을 끼쳐드려 다시 한 번 진심으로 사과드리며, 여러분의 너그러운 이해에 깊이 감사드립니다.<br><br>앞으로도 Jungdapi는 더욱 신뢰받는 지식 서비스로서 더 나은 경험으로 보답드릴 수 있도록 최선을 다하겠습니다.<br><br>감사합니다.<br>Jungdapi 운영팀 드림</p>
+            <div id="popup-buttons">
+                <label id="popup-today-close">
+                    <input type="checkbox"> 오늘 하루 보지 않기
+                </label>
+                <button id="popup-close">닫기</button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
