--- a/index.html
+++ b/index.html
@@ -745,6 +745,11 @@
     "pluginKey": "737e7597-292e-4d3d-b33b-6c7e988abeb3"
   });
 </script>
+    <style>
+  * {
+    -webkit-tap-highlight-color: transparent;
+  }
+</style>
 
 
 </html>
