--- a/100bal.html
+++ b/100bal.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="/simbol.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>100발 100중 중학 영어 1-1 답지</title>
+    <meta name="description" content="100발 100중 (백발백중) 기출문제집 (송미정) 답지 | Jungdapi">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
