--- a/index.html
+++ b/index.html
@@ -490,10 +490,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '만점왕 초등 수학 3-2',
+                    link: 'https://jungdapi.netlify.app/man32',
+                    imgSrc: 'https://i.postimg.cc/bJT3dVBJ/XL-5.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
 
                  {
