--- a/search.html
+++ b/search.html
@@ -378,6 +378,15 @@
                 grade: '1',
                 semester: '2',
             },
+            {
+                title: '만점왕 초등 수학 3-2',
+                link: 'https://jungdapi.netlify.app/man32',
+                imgSrc: 'https://i.postimg.cc/bJT3dVBJ/XL-5.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+                school: '초등',
+                grade: '3',
+                semester: '2',
+            },
             
         ];
 
