--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>정답이 로그인 페이지</title>
+  <!-- Supabase 라이브러리 추가 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body {
@@ -50,6 +51,7 @@
 
   <div id="user-info"></div>
 
+  <!-- Supabase 클라이언트 초기화 후, 동작 함수들 배치 -->
   <script>
     // Supabase 연결 정보 (너 프로젝트 전용)
     const supabase = supabase.createClient(
