--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>로그인 / 회원가입</title>
+  <title>로그인 / 회원가입 1</title>
   <style>
     body {
       font-family: sans-serif;
@@ -85,7 +85,6 @@
         .from('users')
         .insert([{ email, name }]);
 
-
       if (insertError) {
         alert('유저 정보 저장 실패: ' + insertError.message);
         return;
@@ -120,7 +119,7 @@
       }
 
       // 배열로 반환되므로 첫 번째 데이터 가져오기
-      alert(`환영합니다, ${userData[0].name}님!`);
+      alert(환영합니다, ${userData[0].name}님!);
     }
   </script>
 </body>
