--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>로그인 / 회원가입 2</title>
+  <title>로그인 / 회원가입</title>
   <style>
     body {
       font-family: sans-serif;
@@ -123,4 +123,5 @@
     }
   </script>
 </body>
+</html>
 </html>
