--- a/index.html
+++ b/index.html
@@ -753,3 +753,226 @@
 
 
 </html>
+
+
+
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>자동 팝업창</title>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        /* 팝업창 스타일 */
+        #popup {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.5);
+            justify-content: center;
+            align-items: center;
+            z-index: 10;
+            font-family: 'Noto Sans KR', sans-serif;
+        }
+        #popup-content {
+            background-color: #ffffff;
+            padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+            width: 95%;
+            max-width: 550px;
+            box-shadow: 0 6px 18px rgba(0, 0, 0, 0.15);
+            animation: fadeIn 0.3s ease-out;
+            max-height: 80vh;
+            border: none;
+            display: flex;
+            flex-direction: column;
+            margin: 10px;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        #popup-title {
+            font-size: 24px;
+            font-weight: 700;
+            margin-bottom: 16px;
+            color: #2c3e50;
+            text-align: left;
+        }
+        #popup-text {
+            font-size: 16px;
+            line-height: 1.7;
+            margin-bottom: 20px;
+            color: #495057;
+            text-align: left;
+            flex: 1;
+            overflow: auto;
+        }
+        #popup-buttons {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            margin-top: 25px;
+            flex-shrink: 0;
+        }
+        #popup-close {
+            padding: 12px 25px;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 5px 11px rgba(0, 0, 0, 0.1);
+            background-color: #007bff;
+            border-radius: 25px;
+        }
+        #popup-close:hover {
+            background-color: #0056b3;
+            box-shadow: 0 7px 14px rgba(0, 0, 0, 0.15);
+        }
+        #popup-close:active {
+            background-color: #004080;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            transform: translateY(1px);
+        }
+        #popup-today-close {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            color: #868e96;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            margin-right: auto;
+        }
+        #popup-today-close input[type="checkbox"] {
+            margin-right: 8px;
+            position: relative;
+            cursor: pointer;
+            width: 20px;
+            height: 20px;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            border: 2px solid #adb5bd;
+            border-radius: 5px;
+            outline: none;
+            transition: border-color 0.3s ease, background-color 0.3s ease;
+        }
+        #popup-today-close input[type="checkbox"]:checked {
+            background-color: #007bff;
+            border-color: #007bff;
+        }
+        #popup-today-close input[type="checkbox"]:checked::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%) rotate(45deg);
+            width: 6px;
+            height: 12px;
+            border: solid white;
+            border-width: 0 3px 3px 0;
+        }
+        #popup-today-close input[type="checkbox"]:focus {
+            box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
+        }
+        .popup-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 12px;
+            margin-bottom: 20px;
+        }
+    </style>
+    <script>
+        window.onload = function() {
+            var popup = document.getElementById('popup');
+            var closeButton = document.getElementById('popup-close');
+            var todayCloseButton = document.getElementById('popup-today-close');
+            var todayCloseCheckbox = todayCloseButton.querySelector('input[type="checkbox"]');
+
+            // 팝업 표시
+            if (getCookie('popup_closed') !== 'true') {
+                popup.style.display = 'flex';
+            }
+
+            // 닫기 버튼 클릭 이벤트
+            closeButton.onclick = function() {
+                if (todayCloseCheckbox.checked) {
+                    setCookie('popup_closed', 'true', 1);
+                } else {
+                    deleteCookie('popup_closed');
+                }
+                popup.style.display = 'none';
+            };
+
+            // 오늘 하루 보지 않기 버튼 클릭 이벤트
+            todayCloseButton.onclick = function() {
+                todayCloseCheckbox.checked = !todayCloseCheckbox.checked;
+            };
+
+            // 쿠키 설정 함수
+            function setCookie(name, value, days) {
+                var expires = "";
+                if (days) {
+                    var date = new Date();
+                    date.setTime(date.getTime() + (days * 24 * 60 * 60 * 1000));
+                    expires = "; expires=" + date.toUTCString();
+                }
+                document.cookie = name + "=" + (value || "") + expires + "; path=/";
+            }
+
+            // 쿠키 가져오기 함수
+            function getCookie(name) {
+                var nameEQ = name + "=";
+                var ca = document.cookie.split(';');
+                for (var i = 0; i < ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) === ' ') {
+                        c = c.substring(1, c.length);
+                    }
+                    if (c.indexOf(nameEQ) === 0) {
+                        return c.substring(nameEQ.length, c.length);
+                    }
+                }
+                return null;
+            }
+
+            // 쿠키 삭제 함수
+            function deleteCookie(name) {
+                document.cookie = name + '=; path=/; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+            }
+        };
+    </script>
+</head>
+<body>
+    <div id="popup">
+        <div id="popup-content">
+            <h2 id="popup-title">Jungdapi 서비스 종료 안내</h2>
+            <p id="popup-text">
+                Jungdapi를 사랑해주신 소중한 고객 여러분께,<br><br>
+                그동안 저희 Jungdapi에 보내주신 따뜻한 관심과 끊임없는 성원에 진심으로 머리 숙여 감사드립니다. 여러분의 응원과 격려 덕분에 Jungdapi는 수많은 질문에 귀 기울이고, 함께 지식을 나누며 성장해 올 수 있었습니다.<br><br>
+                하지만, 깊은 고뇌와 숙고 끝에 오는 2025년 5월 30일을 마지막으로 Jungdapi 서비스의 문을 닫게 되었습니다.<br><br>
+                때로는 명쾌한 해답을, 때로는 따뜻한 위로를 전하고자 했던 Jungdapi는 이제 여러분의 곁을 떠나지만, 저희의 마음속에는 함께했던 소중한 시간들이 영원히 기억될 것입니다. 여러분의 질문 하나하나, Jungdapi를 통해 얻으셨던 작은 깨달음들이 저희에게는 큰 보람이자 기쁨이었습니다.<br><br>
+                갑작스러운 서비스 종료 소식에 실망하셨을 고객님들의 마음을 헤아리며, 저희 또한 안타까운 마음 금할 길이 없습니다. 그동안 Jungdapi를 믿고 이용해 주신 모든 분들께 진심으로 감사드립니다. 여러분이 보내주신 사랑은 저희에게 큰 힘이 되었습니다.<br><br>
+                비록 Jungdapi 서비스는 종료되지만, 저희는 이 경험을 바탕으로 더욱 발전된 모습으로 다시 찾아뵐 수 있도록 노력하겠습니다.<br><br>
+                -Jungdapi 개발자 강기훈 드림.
+            </p>
+            <div id="popup-buttons">
+                <label id="popup-today-close">
+                    <input type="checkbox"> 오늘 하루 보지 않기
+                </label>
+                <button id="popup-close">닫기</button>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
