--- a/index.html
+++ b/index.html
@@ -497,10 +497,10 @@
                 },
 
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '평가문제집 중학 국어 1-1(박영민)',
+                    link: 'https://jungdapi.netlify.app/ko1',
+                    imgSrc: 'https://i.postimg.cc/8PwxPzHq/9791173161025.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
