--- a/cho6.html
+++ b/cho6.html
@@ -168,10 +168,10 @@
     <div class="book-section">
         <h2>책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/QNybBxmv/XL-2.jpg" alt="100발100중 중학 영어 1-1" class="book-cover">
-            <h3 class="book-title">100발100중 중학 영어 1-1</h3>
+            <img src="https://i.postimg.cc/QNybBxmv/XL-2.jpg" alt="초등영문법 3800제 6권" class="book-cover">
+            <h3 class="book-title">초등영문법 3800제 6권</h3>
             <p class="book-description">
-                100발100중으로 시함 완벽대비!
+                단순하고 반복적인 연습문제 풀이로 영문법 기초완성!
             </p>
         </div>
         <div class="button-container">
