--- a/cho6.html
+++ b/cho6.html
@@ -150,7 +150,7 @@
 
             downloadButton.addEventListener('click', () => {
                 // 다운로드 링크를 직접 지정합니다.
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1R_JiZ59Vc6qlaJg1n5i6tIN0fGisIY78&export=download';
+                const downloadUrl = 'https://drive.usercontent.google.com/u/0/uc?id=1GFO447MOg4-p1sUi71ElrvPULJRCpqQN&export=download';
                 // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
                 window.location.href = downloadUrl;
             });
