--- a/index.html
+++ b/index.html
@@ -503,10 +503,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '초등영문법 3800제 6권',
+                    link: 'https://jungdapi.netlify.app/cho6',
+                    imgSrc: 'https://i.postimg.cc/QNybBxmv/XL-2.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
