--- a/gw2.html
+++ b/gw2.html
@@ -171,7 +171,7 @@
             <img src="https://i.postimg.cc/dtxZm4x0/XL-3.jpg" alt="Grammer Wise Level 2" class="book-cover">
             <h3 class="book-title">Grammer Wise Level 2</h3>
             <p class="book-description">
-                100발100중으로 시함 완벽대비!
+                문법과 독해를 동시에 학습할 수 있도록 구성된 문법의 끝!
             </p>
         </div>
         <div class="button-container">
