--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: 'Grammer Wise Level 2',
+                    link: 'https://jungdapi.netlify.app/gw2',
+                    imgSrc: 'https://i.postimg.cc/dtxZm4x0/XL-3.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
