--- a/search.html
+++ b/search.html
@@ -406,7 +406,7 @@
                 semester: '전체 학기',
             },
             {
-                title: 'Grammer Wise Level 2',
+                title: 'Grammar Wise Level 2',
                 link: 'https://jungdapi.netlify.app/gw2',
                 imgSrc: 'https://i.postimg.cc/dtxZm4x0/XL-3.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
