--- a/suman.html
+++ b/suman.html
@@ -168,10 +168,10 @@
     <div class="book-section">
         <h2>책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/LXWQBvQ0/image.jpg" alt="중간고사 대비 수학만 기출문제집 중학 수학 1-1" class="book-cover">
-            <h3 class="book-title">100발100중 중학 영어 1-1</h3>
+            <img src="https://i.postimg.cc/3wJ5scrv/XL-4.jpg" alt="중간고사 대비 수학만 기출문제집 중학 수학 1-1" class="book-cover">
+            <h3 class="book-title">중간고사 대비 수학만 기출문제집 중학 수학 1-1</h3>
             <p class="book-description">
-                100발100중으로 시함 완벽대비!
+                시험전 범위 반복 학습으로 실전력 강화!
             </p>
         </div>
         <div class="button-container">
